<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="61dp"
        android:layout_height="19dp"
        android:enabled="false"
        android:text="@string/textError"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/textViewOperation"
        android:layout_width="168dp"
        android:layout_height="22dp"
        android:autofillHints="@string/operacion"
        android:hint="@string/operacion"
        android:text="@string/operacion"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewError"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/btnUno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOperation"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/btnDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnTres"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toEndOf="@+id/btnUno"
        app:layout_constraintTop_toBottomOf="@+id/textViewOperation"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/btnTres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toEndOf="@+id/btnUno"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/btnCuatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUno" />

    <Button
        android:id="@+id/btnCinco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:text="@string/button5"
        app:layout_constraintEnd_toStartOf="@+id/btnSeis"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnCuatro"
        app:layout_constraintTop_toBottomOf="@+id/btnDos"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/btnSeis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:text="@string/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTres" />

    <Button
        android:id="@+id/btnSiete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCuatro" />

    <Button
        android:id="@+id/btnOcho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/button8"
        app:layout_constraintStart_toEndOf="@+id/btnSiete"
        app:layout_constraintTop_toBottomOf="@+id/btnCinco" />

    <Button
        android:id="@+id/btnNueve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/btnOcho"
        app:layout_constraintTop_toBottomOf="@+id/btnSeis" />

    <Button
        android:id="@+id/buttonSuma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCero"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSiete"
        app:layout_constraintVertical_bias="0.096" />

    <Button
        android:id="@+id/btnCero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/button0"
        app:layout_constraintTop_toBottomOf="@+id/btnOcho"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="165dp" />

    <Button
        android:id="@+id/buttonResta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:text="@string/resta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnCero"
        app:layout_constraintTop_toBottomOf="@+id/btnNueve"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonResul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/igual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCero"
        app:layout_constraintVertical_bias="0.129" />

</androidx.constraintlayout.widget.ConstraintLayout>